--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ xarray-multiscale = "^2.1.0"
 numpy = "^1.26.2"
 zarr = "^2.16.1"
 dask = {extras = ["distributed"], version = "^2023.12.0"}
-dask-jobqueue = "^0.8.2"
+dask-jobqueue = "0.8.2"
 tifffile = "^2023.12.9"
 numcodecs = "^0.12.1"
 numba = "^0.59.0"
