--- a/pixi.toml
+++ b/pixi.toml
@@ -11,12 +11,11 @@ platforms = ["linux-64"]
 python = "3.11.*"
 bokeh = ">=3.3.2"
 numpy = ">=1.26.2"
-zarr = ">=2.18.3"
+zarr = ">=2.18.3,<3.0"
 dask = ">=2023.12.0"
-numcodecs = ">=0.15.1"
-numba = ">=0.59.0"
-click = "*"
-scipy = "*"
+numcodecs = ">=0.15.1,<0.16.1"
+click = ">=8.1.8,<9.0.0"
+scipy = ">=1.16.1"
 
 [pypi-dependencies]
 xarray-multiscale = ">=2.1.0"
