--- a/pixi.toml
+++ b/pixi.toml
@@ -16,6 +16,7 @@ dask = ">=2023.12.0"
 numcodecs = ">=0.15.1,<0.16.1"
 click = ">=8.1.8,<9.0.0"
 scipy = ">=1.16.1"
+pytest = "*"
 
 [pypi-dependencies]
 xarray-multiscale = ">=2.1.0"
